Melhoria da performance através de ResultSets permanentes durante toda a execução do programa, criação dos métodos para a segunda parte, como a estimativa de habilidade através do método da máxima verossimilhança (log-likelihood)